Added a csv download endpoint for student report data